Added support for setting TPM State in the BIOS
Jira: CASMHMS-5535
